--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 	<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
 	<title>News, sport and opinion from the Guardian's UK edition | The Guardian</title>
-
-	<link rel="stylesheet" type="text/css" href="./style.css">
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	
+	<link rel="stylesheet" type="text/css" href="./style.css">
+
 </head>
 
 <body id="top" >
@@ -461,33 +465,79 @@
 				</header>
 			</div>
 			<div>
-				<ul style="list-style: none;">
-					<li>
+				<ul class="row" style="list-style: none;">
+					<li class="col-sm-8" style="display: inline-grid;">
 						<div class "row">
-							<div class="col-lg-5">
+							<div class="col-sm-4">
 								<div>
-									<h1>
+									<h3>
 										<a href="https://www.theguardian.com/politics/2019/mar/07/uk-should-offer-new-brexit-proposal-french-europe-minister-says" class="fc-item__link" data-link-name="article">
 											<span class="fc-item__kicker">Brexit</span> 
 											<span class="u-faux-block-link__cta fc-item__headline"> 
 												<span class="headline-text">UK should offer new proposal, French Europe minister says</span>
 											</span> 
 										</a>
-									</h1>
+									</h3>
 								</div>
 
 								<div>
-									<h5>
+									<h4 style="">
 										Nathalie Loiseau says ‘clock is ticking’ as she prepares to meet UK Brexit secretary
-									<h5>
+									<h4>
 								</div>
 							</div>
-							<div class="col-lg-7">
-								<img src="https://i.guim.co.uk/img/media/005388fc3afede79e5985ba07c08a76bc4ae47e9/70_72_5253_3152/master/5253.jpg?width=300&amp;quality=85&amp;auto=format&amp;fit=max&amp;s=a4014aa8668773c88528adc0ff6aa77a">
+							<div class="col-sm-8">
+								<img  style="width: -webkit-fill-available;" src="https://i.guim.co.uk/img/media/005388fc3afede79e5985ba07c08a76bc4ae47e9/70_72_5253_3152/master/5253.jpg?width=300&amp;quality=85&amp;auto=format&amp;fit=max&amp;s=a4014aa8668773c88528adc0ff6aa77a">
 							</div>
 						</div>
+						
+						<div>
+							<ul class="row" style="list-style: none">
+								<li class="col-sm-4">
+									<h4> 
+										<a href="https://www.theguardian.com/politics/2019/mar/07/philip-hammond-warns-hard-brexiters-to-vote-for-theresa-may-deal-or-risk-softer-brexit" class="fc-sublink__link" data-link-name="article">
+											<span class="fc-sublink__kicker">Brexit</span>
+											Back May’s deal or risk soft Brexit, Hammond tells Tories
+										</a> 
+									</h4>
+								</li>
+
+								<li class="col-sm-4">
+									<h4> 
+										<a href="https://www.theguardian.com/politics/2019/mar/07/philip-hammond-warns-hard-brexiters-to-vote-for-theresa-may-deal-or-risk-softer-brexit" class="fc-sublink__link" data-link-name="article">
+											<span class="fc-sublink__kicker">Brexit</span>
+											Back May’s deal or risk soft Brexit, Hammond tells Tories
+										</a> 
+									</h4>
+								</li>
+
+								<li class="col-sm-4">
+									<h4> 
+										<a href="https://www.theguardian.com/politics/2019/mar/07/philip-hammond-warns-hard-brexiters-to-vote-for-theresa-may-deal-or-risk-softer-brexit" class="fc-sublink__link" data-link-name="article">
+											<span class="fc-sublink__kicker">Brexit</span>
+											Back May’s deal or risk soft Brexit, Hammond tells Tories
+										</a> 
+									</h4>
+								</li>
+							</ul>
+						</div>
 					</li>
-					<li>
+					<li class="col-sm-4">
+						<div>
+							<div>
+								<img alt="" src="https://i.guim.co.uk/img/media/4174e3b2e6d40ad874e586b0a69dbd5856c34f76/0_56_3500_2100/master/3500.jpg?width=300&amp;quality=85&amp;auto=format&amp;fit=max&amp;s=2d58ae559bbe5c92db99a7c2673b7970">
+							</div>
+							<div>
+								<h3>
+									<a href="https://www.theguardian.com/uk-news/2019/mar/07/pm-urged-to-fix-school-exclusion-system-to-tackle-knife-sadiq-khan">
+										<span class="fc-item__kicker">'Off-rolling'</span> 
+										<span> 
+											<span class="headline-text">PM urged to fix school exclusion system to tackle knife crime</span>
+										</span> 
+									</a>
+								</h3>
+							</div>
+						</div>
 					</li>
 				</ul>
 			</div>
